fix: text input overflow
fix #1004

--- a/scss/partials/_window.scss
+++ b/scss/partials/_window.scss
@@ -259,6 +259,7 @@
   line-height: 1.4em;
   margin: 0;
   min-height: auto;
+  min-width: 50px;
   outline: none;
   padding: 10px 5px 5px 0;
   resize: none;
